# Galaga

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp  typedefs.h
Background/: StarBackground.cpp  StarBackground.h
CMakeModules/: FindSDL2_image.cmake
Components/: Component.cpp  Component.h  FormationPosition.h  GroupCell.h  Health.cpp  Health.h  PositionComponent.cpp  PositionComponent.h  Sprite.cpp  Sprite.h  SpriteComponent.cpp  SpriteComponent.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h
Components/Input/: InputComponent.cpp  InputComponent.h
ECS/: ComponentCollection.h  ComponentType.h  ECS.cpp  ECS.h
Entities/: Alien.cpp  Alien.h  AlienGroup.cpp  AlienGroup.h  Catcher.cpp  Catcher.h  Entity.cpp  Entity.h  Explosion.cpp  Explosion.h  Fighter.cpp  Fighter.h  Missile.cpp  Missile.h  Missle.cpp  Missle.h  Soldier.cpp  Soldier.h  SpaceEntity.cpp  SpaceEntity.h  Spaceship.cpp  Spaceship.h  SpriteType.h
Game/: AssetPaths.h  EntityManager.h  Game.cpp  Game.h  ObjectPool.h  Poolable.h  Rect.h  World.cpp  World.h
Interface/: LifeCycle.h
Player/: PlayerController.cpp  PlayerController.h
Scripts/: AlienGroup.cpp  AlienGroup.h  AlienSpawner.cpp  AlienSpawner.h  CollisionSystem.cpp  CollisionSystem.h  Formation.cpp  Formation.h
Splines/: Spline.cpp  Spline.h  SplinePath.cpp  SplinePaths.cpp  SplinePaths.h
States/: GameState.h  PlayState.cpp  PlayState.h
Systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  System.cpp  System.h
Util/: Defaults.cpp  Defaults.h  Rect.cpp  Rect.h  Spline.cpp  Spline.h  SplinePath.cpp  SplinePath.h  SpriteMap.h  TextureManager.cpp  TextureManager.h
